fix providers icon spacing bug

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -65,11 +65,6 @@ a {
   text-underline-position: under;
 }
 
-img{
-  max-width: 100%;
-  max-height: 100%;
-}
-
 button,
 .button {
   all: unset;
